// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no price adjustments or summary components if cart is empty 1`] = `
<div>
  <div>
    <h1>
      Cart
    </h1>
    <button
      onClick={[Function]}
      type="button"
    >
      <span>
        Sign In
      </span>
    </button>
  </div>
  <div>
    <div>
      <h3>
        There are no items in your cart.
      </h3>
    </div>
    <div />
    <div>
      <div />
    </div>
    <div>
      <a
        href="https://jira.corp.magento.com/browse/PWA-270"
      >
        Recently Viewed to be completed by PWA-270.
      </a>
    </div>
  </div>
</div>
`;

exports[`renders price adjustments and summary components if cart has items 1`] = `
<div>
  <div>
    <h1>
      Cart
    </h1>
    <button
      onClick={[Function]}
      type="button"
    >
      <span>
        Sign In
      </span>
    </button>
  </div>
  <div>
    <div>
      <h3>
        There are no items in your cart.
      </h3>
    </div>
    <div>
      <div>
        <div>
          <div>
            <button
              onClick={[Function]}
            >
              <div>
                Select Shipping Method
              </div>
              <span>
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="18 15 12 9 6 15"
                  />
                </svg>
              </span>
            </button>
            <div>
              <a
                href="https://jira.corp.magento.com/browse/PWA-239"
              >
                Shipping Methods to be completed by PWA-239.
              </a>
            </div>
          </div>
          <div>
            <button
              onClick={[Function]}
            >
              <div>
                Enter Coupon Code
              </div>
              <span>
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </button>
            <div />
          </div>
          <div>
            <button
              onClick={[Function]}
            >
              <div>
                Apply Gift Card
              </div>
              <span>
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </button>
            <div />
          </div>
          <div>
            <button
              onClick={[Function]}
            >
              <div>
                See Gift Options
              </div>
              <span>
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </button>
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div />
    </div>
    <div>
      <a
        href="https://jira.corp.magento.com/browse/PWA-270"
      >
        Recently Viewed to be completed by PWA-270.
      </a>
    </div>
  </div>
</div>
`;
